--- a/main.css
+++ b/main.css
@@ -13,6 +13,10 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 .container {
     width: 1170px;
     margin: 0 auto;
@@ -56,6 +60,7 @@ a.arrow {
     font-weight: 600;
     color: #270D34;
     padding: 10px 0;
+    transition: all .2s ease-in-out;
 }
 
 a.arrow img {
@@ -63,7 +68,7 @@ a.arrow img {
 }
 
 a.arrow:hover {
-    font-weight: 700;
+    transform: translateX(5px);
 }
 
 p {
@@ -111,6 +116,14 @@ ul {
     align-items: center;
 }
 
+img[alt~="Logo"] {
+    transition: all .2s ease-in-out;
+}
+
+img[alt~="Logo"]:hover {
+    transform: scale(1.05);
+}
+
 .menu nav > ul > li {
     margin: 0 10px;
 }
@@ -123,6 +136,7 @@ ul {
     letter-spacing: 0.045em;
     padding: 10px;
     position: relative;
+    transition: all .2s ease-in-out;
 }
 
 .menu nav > ul > li > a::after {
@@ -144,6 +158,7 @@ ul {
 .menu nav > ul > li > a:hover,
 .menu .lang > a:hover {
     color: #F6E014;
+    transition: all .2s ease-in-out;
 }
 
 .menu nav > ul > li > a:hover::after {
